# http_double_rs485

./: CMakeLists.txt  README.md  http_demo2.html
example/: CMakeLists.txt  http_rest_realtime_main.cpp  lop1_thread_async.cpp  lop2_test.cpp
src/: CMakeLists.txt
src/basetoweb/: basetoweb.cpp  basetoweb.h
src/datatobase/: lop1_database_fast.cpp  lop1_database_fast.h  lop2_database.cpp  lop2_database.h
src/devices/: crc16.cpp  lop1.cpp  lop1.h  lop2.cpp  lop2.h
src/linux_uart/: linux_uart.cpp  linux_uart.h
src/parsedata/: lop1_frame1.cpp  lop1_frame1.h  lop1_frame2.cpp  lop1_frame2.h  lop2_frame.cpp  lop2_frame.h
